--- a/src/App.css
+++ b/src/App.css
@@ -70,6 +70,24 @@ img {
   color: red;
   cursor: pointer;
 }
+li{
+  list-style: none;
+}
+a{
+  text-decoration: none;
+}
+.nav{
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+  border-bottom:2px solid #f3f3f3 ;
+}
+ul.list-nav {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 100%;
+}
 @media (max-width: 992px) {
   button {
     width: 35% !important;
